--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Banner section -->
   
-<h1>Hello World - origin with C/h1>
+<h1>Hello World - origin with C</h1>
   <!-- Cards section -->
 
   <!-- Footer section -->
